# orchestration-hw2

./: .env-example  .gitignore  README.md  pyproject.toml
.agents/skills/project-setup/: SKILL.md
config/: logging_config.json  rate_limits.json  setup.json  setup_example.json
docs/: DEVELOPER_GUIDE.md  PLAN.md  PRD.md  PRD_agent_skills.md  PRD_debate_orchestration.md  PRD_sdk.md  TODO.md  example_debate.md
docs/prompt_log/: PROMPT_LOG.md
src/: main.py
src/debate/: __init__.py  constants.py  main.py
src/debate/agents/: base_agent.py  con_agent.py  judge_agent.py  pro_agent.py
src/debate/cli/: __init__.py  menu.py
src/debate/providers/: anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py
src/debate/sdk/: __init__.py  agent_factory.py  provider_factory.py  sdk.py  wiring.py
src/debate/services/: __init__.py  contracts.py  cost_calculator.py  debate_state.py  orchestrator.py  orchestrator_logging.py  orchestrator_turns.py  prompt_builder.py  search_service.py  usage_record.py  verdict.py
src/debate/shared/: config.py  config_models.py  config_validator.py  gatekeeper.py  logger.py  paths.py  protocols.py  version.py  watchdog.py
src/debate/skills/: __init__.py  base_skill.py  persuasion_scoring.py  quality_standards.py  registry.py  research_analysis.py
tests/fakes/: __init__.py  agents.py  logger.py  providers.py
tests/integration/: test_debate_flow.py
tests/unit/test_agents/: test_base_agent.py  test_base_agent_logging.py  test_con_agent.py  test_judge_agent.py  test_pro_agent.py
tests/unit/test_cli/: test_menu.py
(+40 files in other folders)
